- MAJOR: combine Send SMS and Send broadcast SMS (anton)
- MAJOR: several rename to core files and functions (anton)
- MAJOR: $arr_menu rename to $menu_config, its global just like $core_config (anton)
- remove option for multilogin, it will always be multi-login since using session (anton)
- remove old page_welcome pages, now in inc/user/page_welcome.php and configurable (anton)
- add json output to webservices with param format=json (anton)
- add installer script for playSMS on Ubuntu (anton)
- add new type of action get_token to get webservices token from supplied username (anton)
- add new dba functions dba_search() dba_count() dba_update() dba_add() etc (anton)
- add language for themes play (aseques)
- add new error codes for webservice (aseques)
- add bat files to start and stop gammu, playsmsd, sendsmsd in MS Windows (anton)
- add config for playsmsd and sendsmsd in MS Windows, playsms.bat (anton)
- add lib/fn_init.php to hold init functions, small re-structure in init.php (anton)
- add lib/fn_country.php (anton)
- add lib/fn_gateway.php and gateway_get() to get current active gateway (anton)
- add instructions to enable fail2ban (aseques)
- add an option to autocomplete short numbers with international prefix (aseques)
- add new plugin tools bchash convert #<group code> to BC <group code> (anton)
- add inline @<username> and #<group code> handler (anton)
- add simple reply and forward feature on inbox and incoming SMS (anton)
- add IP validations with network masks for playSMS web services (anton)
- add new gateway module for Nexmo (anton)
- add new gateway module Dev for development or simulation (anton)
- add export output to PHP serialize, json, xml and image for sms_poll (anton)
- add export output to PHP serialize, json, xml, rss feeds, html for sms_board (anton)
- add hook for sendsms_get_template() and used by plugin msgtemplate (anton)
- add 'Export as CSV' feature (anton)
- add Search box (anton)
- add Home link to page_noaccess (anton)